--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "lark",
     "transformers>=5.2.0",
     "torch-tensorrt>=2.9.0",
+    "accelerate>=1.12.0",
 ]
 
 [dependency-groups]
